# php-src-kos

./: .gitignore  .gitmodules  CLA.md  CONTRIBUTING.md  README.md  cross-config.sh  run-tests.php
Zend/: zend_API.c  zend_builtin_functions.c  zend_ini_parser.c  zend_ini_parser.h  zend_ini_scanner.c  zend_language_parser.c  zend_language_parser.h  zend_language_scanner.c  zend_language_scanner.l  zend_signal.c  zend_virtual_cwd.c  zend_virtual_cwd.h  zend_vm_execute.h
Zend/tests/: 019.phpt  arginfo_zpp_mismatch.phpt  bug60771.phpt  bug74093.phpt  (+14 more)
kos/examples/fpm/: CMakeLists.txt  README.md
kos/examples/fpm/einit/: CMakeLists.txt
kos/examples/fpm/einit/src/: init.yaml.in  security.psl  security.psl.in
kos/examples/fpm/netinit/: NetInit.edl  main.c
kos/examples/fpm/resources/hdd/: ping.php
kos/examples/fpm/resources/hdd/etc/: dhcpcd.conf
kos/examples/fpm/resources/hdd/usr/local/var/conf/fpm/: php-fpm.conf
kos/examples/fpm/resources/hdd/usr/local/var/etc/php-fpm.d/: www.conf
kos/examples/fpm/resources/hdd/usr/share/i18n/csmapper/: charset.pivot  charset.pivot.pvdb
kos/examples/fpm/resources/hdd/usr/share/i18n/esdb/: esdb.alias.db
kos/examples/fpm/resources/hdd/usr/share/i18n/esdb/BIG5/: Big5-2003.esdb  Big5-ETen.esdb  Big5-HKSCS.esdb  Big5-IBM.esdb  Big5-Plus.esdb
kos/examples/fpm/resources/hdd/usr/share/i18n/esdb/GEORGIAN/: GEORGIAN-ACADEMY-OldCapital.esdb
kos/examples/web_server/: CMakeLists.txt  README.md  cross-build.sh
kos/examples/web_server/einit/: CMakeLists.txt
kos/examples/web_server/einit/src/: init.yaml.in  security.psl  security.psl.in
kos/examples/web_server/netinit/: CMakeLists.txt  NetInit.edl  main.c
kos/examples/web_server/resources/hdd/etc/: hosts
kos/examples/web_server/resources/hdd/usr/local/nginx/conf/: nginx.conf
kos/examples/web_server/resources/hdd/usr/local/var/etc/php-fpm.d/: www.conf
kos/examples/web_server/resources/hdd/usr/share/i18n/csmapper/: mapper.dir  mapper.dir.db
kos/examples/web_server/resources/hdd/usr/share/i18n/esdb/: esdb.alias  esdb.dir
kos/examples/web_server/resources/hdd/usr/share/i18n/esdb/BIG5/: Big5-E.esdb
kos/examples/web_server/resources/hdd/usr/share/i18n/esdb/GEORGIAN/: GEORGIAN-ACADEMY.esdb  GEORGIAN-PS-OldCapital.esdb  GEORGIAN-PS.esdb
kos/examples/web_server/resources/hdd/www/: index.php
kos/php/: CMakeLists.txt  cross-build.sh  install.sh  php-config.cmake.in  uninstall.sh
kos/php/fpm/: CMakeLists.txt  Fpm.edl
kos/php/fpm/libraries/: CMakeLists.txt
kos/php/fpm/libraries/TSRM/: CMakeLists.txt
kos/php/fpm/libraries/Zend/: CMakeLists.txt
kos/php/fpm/libraries/ext/: CMakeLists.txt
kos/php/fpm/libraries/ext/ctype/: CMakeLists.txt
kos/php/fpm/libraries/ext/date/: CMakeLists.txt
kos/php/fpm/libraries/ext/dom/: CMakeLists.txt
kos/php/fpm/libraries/ext/fileinfo/: CMakeLists.txt
kos/php/fpm/libraries/ext/filter/: CMakeLists.txt
kos/php/fpm/libraries/ext/hash/: CMakeLists.txt
kos/php/fpm/libraries/ext/iconv/: CMakeLists.txt
kos/php/fpm/libraries/ext/json/: CMakeLists.txt
kos/php/fpm/libraries/ext/libxml/: CMakeLists.txt
kos/php/fpm/libraries/ext/openssl/: CMakeLists.txt
kos/php/fpm/libraries/ext/pcre/: CMakeLists.txt
kos/php/fpm/libraries/ext/pdo/: CMakeLists.txt
kos/php/fpm/libraries/ext/pdo_sqlite/: CMakeLists.txt
kos/php/fpm/libraries/ext/phar/: CMakeLists.txt
kos/php/fpm/libraries/ext/posix/: CMakeLists.txt
kos/php/fpm/libraries/ext/random/: CMakeLists.txt
kos/php/fpm/libraries/ext/reflection/: CMakeLists.txt
kos/php/fpm/libraries/ext/session/: CMakeLists.txt
kos/php/fpm/libraries/ext/simplexml/: CMakeLists.txt
kos/php/fpm/libraries/ext/spl/: CMakeLists.txt
kos/php/fpm/libraries/ext/sqlite3/: CMakeLists.txt
kos/php/fpm/libraries/ext/standard/: CMakeLists.txt
kos/php/fpm/libraries/ext/tokenizer/: CMakeLists.txt
kos/php/fpm/libraries/ext/xml/: CMakeLists.txt
kos/php/fpm/libraries/ext/xmlreader/: CMakeLists.txt
kos/php/fpm/libraries/ext/xmlwriter/: CMakeLists.txt
kos/php/fpm/libraries/main/: CMakeLists.txt
kos/php/fpm/libraries/main/streams/: CMakeLists.txt
kos/tests/: .gitignore  CMakeLists.txt  copy_tests.py  cross-build.sh
kos/tests/client/: CMakeLists.txt  Client.edl  copy_tests.py  php_cli.c  test_folders.txt  test_modules.txt
kos/tests/einit/: CMakeLists.txt
kos/tests/einit/src/: init.yaml.in  security.psl  security.psl.in
kos/tests/libraries/: CMakeLists.txt
kos/tests/libraries/TSRM/: CMakeLists.txt
kos/tests/libraries/Zend/: CMakeLists.txt
kos/tests/libraries/ext/ctype/: CMakeLists.txt
kos/tests/libraries/ext/date/: CMakeLists.txt
kos/tests/libraries/ext/dom/: CMakeLists.txt
kos/tests/libraries/ext/fileinfo/: CMakeLists.txt
kos/tests/libraries/ext/filter/: CMakeLists.txt
kos/tests/libraries/ext/hash/: CMakeLists.txt
kos/tests/libraries/ext/iconv/: CMakeLists.txt
kos/tests/libraries/ext/json/: CMakeLists.txt
kos/tests/libraries/ext/libxml/: CMakeLists.txt
kos/tests/libraries/ext/openssl/: CMakeLists.txt
kos/tests/libraries/ext/pcre/: CMakeLists.txt
kos/tests/libraries/ext/pdo/: CMakeLists.txt
kos/tests/libraries/ext/pdo_sqlite/: CMakeLists.txt
kos/tests/libraries/ext/phar/: CMakeLists.txt
kos/tests/libraries/ext/posix/: CMakeLists.txt
kos/tests/libraries/ext/reflection/: CMakeLists.txt
kos/tests/libraries/ext/session/: CMakeLists.txt
kos/tests/libraries/ext/simplexml/: CMakeLists.txt
kos/tests/libraries/ext/spl/: CMakeLists.txt
kos/tests/libraries/ext/sqlite3/: CMakeLists.txt
kos/tests/libraries/ext/standard/: CMakeLists.txt
kos/tests/libraries/ext/tokenizer/: CMakeLists.txt
kos/tests/libraries/ext/xml/: CMakeLists.txt
kos/tests/libraries/ext/xmlreader/: CMakeLists.txt
kos/tests/libraries/ext/xmlwriter/: CMakeLists.txt
kos/tests/libraries/main/: CMakeLists.txt
kos/tests/libraries/main/streams/: CMakeLists.txt
kos/tests/resources/hdd/: fstab  run-tests.php
kos/tests/scripts/: tests.py
kos/tests/server/: CMakeLists.txt  Server.edl  main.c  php_cli.c
main/: build-defs.h  internal_functions.c  kos.c  kos.h  php.h  php_config.h  php_config.h.in
(+235 files in other folders)
