add_subdirectory(date)
add_subdirectory(libxml)
add_subdirectory(openssl)
add_subdirectory(pcre)
add_subdirectory(sqlite3)
add_subdirectory(ctype)
add_subdirectory(dom)
add_subdirectory(fileinfo)
add_subdirectory(filter)
add_subdirectory(hash)
add_subdirectory(iconv)
add_subdirectory(json)
add_subdirectory(pdo)
add_subdirectory(pdo_sqlite)
add_subdirectory(phar)
add_subdirectory(posix)
add_subdirectory(reflection)
add_subdirectory(session)
add_subdirectory(simplexml)
add_subdirectory(spl)
add_subdirectory(standard)
add_subdirectory(tokenizer)
add_subdirectory(xml)
add_subdirectory(xmlreader)
add_subdirectory(xmlwriter)
